# C_Cpp2_Hangman

./: .gitignore  CMakeLists.txt  README.md  gamecontroller.cpp  gamecontroller.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  words.txt
model/: gameround.cpp  gameround.h  gametools.cpp  gametools.h  person.cpp  person.h  player.cpp  player.h
